test/end-to-end/compile-errors/extern-invalid-name.crow
main void()
	if extern bar
		foo

foo void() bar extern
	()
